--- a/style/style.css
+++ b/style/style.css
@@ -32,9 +32,14 @@
         color: white;
         border: none;
         padding: 10px;
+        margin-top: 5px;
         cursor: pointer;
     }
 
     .analyzing {
+        background-color: #ff0000;
+    }
+
+    .negative {
         background-color: #ff0000;
     }
